cmake_minimum_required(VERSION 2.8)
project(LeetCode)

# IF (CMAKE_SYSTEM_NAME MATCHES "Windows")

# ELSE()
#     SET (CMAKE_C_COMPILER             "/usr/bin/clang")
#     SET (CMAKE_CXX_COMPILER             "/usr/bin/clang++")
# ENDIF()
if(CMAKE_VERSION VERSION_LESS "3")
  add_definitions(-std=c++11)
else()
  set(CMAKE_CXX_STANDARD 11)
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(Array)
add_subdirectory(DP)
add_subdirectory(HashTable)
add_subdirectory(LinkedList)
add_subdirectory(Math)
add_subdirectory(Other)
add_subdirectory(Stack)
add_subdirectory(String)
add_subdirectory(Tree)
add_subdirectory(Search)
add_subdirectory(Bitset)

